public/css/style.css
@font-face{
  src: url(font/Canterbury.ttf);
  font-family: canterbury;
}

body {
  /* background: #f4f7fd; */
  background: #f0f2f5;
}


.form-signin {
  width: 80%;
  max-width: 330px;
  padding: 15px;
  margin: auto;
}

.form-signin .checkbox {
  font-weight: 400;
}

.form-signin .form-floating:focus-within {
  z-index: 2;
}

.form-signin input[type='email'] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.form-signin input[type='password'] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

/* Generate Certificate */
@page  
{ 
    size: auto;   /* auto is the initial value */ 

    /* this affects the margin in the printer settings */ 
    margin: 20mm 20mm 20mm 20mm; 
    

} 

/*  GWA cert layout  */
#printThis{
  width: 80%;
  
  align-self: center;
}

.head-gwa{
  line-height: 0.2;
  /* display: flex;
  gap: 15px;
  margin-left: 22.2em; */
}
.top-text{
  margin-bottom: 10px;
}

.psu-font{
  font-family: canterbury;
}

.head-left-text-side{
  text-align: center;
  padding: 1em 0 0.5em 0;
  text-align: center;
}

.psu-logo{
  max-width: 15%;
  position: absolute;
  right: 4em;
  top: .5em;
  /* right: 24em;
  top: 7.7em; */
}
@media  (min-width: 1000px)  {
  .psu-logo{
    visibility: hidden;
  }
}

.head-break{
  border-top: 5px solid black;
  width: 100%;
  margin: 0.5em auto 2em 0;
}

#gwa-number{
  font-weight: 500;
  text-decoration: none;
  text-decoration: underline;
  color: #000;
  margin-top: 2em;
  margin-bottom: 1em;
}

.uppercase-text{
  text-transform: uppercase;
  font-weight: 900;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

.certification{
  letter-spacing: 20px;
  text-align: center;
  margin-top: 2em;
  margin-bottom: 2em;
}

.content-text{
  font-family: Times New Roman;
  line-height: 1.2;
  text-align: justify;
}

.remove-decor{
  color: #000;
  text-decoration: none;
  font-weight: 400;
}
.indent{
  text-indent: 50px;
}

.name-and-position{
  text-align: right;
  color: #000;
  line-height: 0.2;
  margin: 4em 4em 4em 0;
}
.name-of-registrar{
  text-transform: uppercase;
}
.name-of-position{
  margin-right: 1.85rem;
}

.lower-text{
  margin-top: 1.5em;
}

/* Cert_Units */
.table-units-middle{
  margin: 0 auto;
  text-align: center;
  margin-bottom: 1.5em;
}
.table-units-middle th, .table-units-middle td{
  padding-right: 2em;
  padding-left: 2em;
}

.gpa-table, .percent-table{
  text-align: right;
}

